--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 xmlns:task="http://www.springframework.org/schema/task"
 http://www.springframework.org/schema/task
 <task:annotation-driven>
+scheduling.job.cron=*/5 * * * * *
+myRate: 3000
+scheduling.job.fixedDelay=5000
+scheduling.job.initialDelay=5000
