--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ scheduling.job.cron=*/5 * * * * *
 myRate: 3000
 scheduling.job.fixedDelay=5000
 scheduling.job.initialDelay=5000
+logging.file=logstash.log
+logging.path=/Users/vijay/Downloads/demo
+logging.level.root=INFO
+
